...

    <string name="phone_title_text">Phone Number</string>
    <string name="sign_in">Sign In</string>

    <string name="title_social">Social</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_programs">Programs</string>
    <string name="title_exercises">Exercises</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
...
    <string name="activity_profile" />
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">OR</string>
    <string name="register">Register!</string>
    <string name="login">Login</string>
    <string name="login_prompt">Login?</string>
    <string name="register_prompt">Register</string>
    <string name="authentication_failed">Auth Failed</string>
    <string name="auth_failure">Auth Failed</string>
    <string name="logout">Logout</string>
    <string name="clear">Clear</string>
    <string name="open_camera">Open Camera</string>
    <string name="profile_pic" />
    <string name="program">Current Program:</string>
    <string name="current_activity">Current Activity:</string>
    <string name="exercise">Exercise</string>
...
