<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/title_exercises" />

    <item
        android:id="@+id/navigation_programs"
        android:icon="@drawable/ic_date_range_black_24dp"
...
